--- a/src/components/ContentMarketplace/Filter/Filter.css
+++ b/src/components/ContentMarketplace/Filter/Filter.css
@@ -101,6 +101,7 @@
   border-bottom: 1px solid #7e7e7e;
   display: flex;
   flex-direction: column;
+  max-width: 100%;
 }
 
 /* .filter_block ul li .ReactCollapse--collapse {
