--- a/src/components/Profile/ProfileWallet/ProfileWallet.css
+++ b/src/components/Profile/ProfileWallet/ProfileWallet.css
@@ -228,13 +228,13 @@
   background-size: 99% 99%;
 }
 
-.create_wallet_binance {
-  background: url('../../../assets/img/create_wallet/4.png') no-repeat center;
+.create_wallet_ramp {
+  background: url('../../../assets/img/create_wallet/4_1.png') no-repeat center;
   background-size: 99% 99%;
 }
 
-.dark .create_wallet_binance {
-  background: url('../../../assets/img/create_wallet/4_dark.png') no-repeat
+.dark .create_wallet_ramp {
+  background: url('../../../assets/img/create_wallet/4_1_dark.png') no-repeat
     center;
   background-size: 99% 99%;
 }
