--- a/src/components/Creators/CreatorsBlock/CreatorsBlock.css
+++ b/src/components/Creators/CreatorsBlock/CreatorsBlock.css
@@ -3,6 +3,10 @@
   margin: 30px auto;
 }
 
+.creator_block-info_wrapper a:hover {
+  cursor: unset;
+}
+
 .creator_block {
   background: url('../../../assets/img/creators_border.png') no-repeat center;
   background-size: 99% 99%;
@@ -36,24 +40,30 @@
 }
 
 .creator_block_info:hover .creator_block_info_main {
-  box-shadow: 0px 0px 1px 0px #5E72F6;
-  transition: 0.4s
+  background: url('../../../assets/img/creator_block_info_main_bg_hover.png')
+    no-repeat center;
+  background-size: 100% 99%;
+}
+
+.dark .creator_block_info:hover .creator_block_info_main {
+  background: url('../../../assets/img/creator_block_info_main_bg_dark_hover.png')
+    no-repeat center;
+  background-size: 100% 99%;
 }
 
 .creator_block_info_main {
-  transition: 0.4s;
-  background: #fff;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 30px;
+  background: url('../../../assets/img/creator_block_info_main_bg.png')
+    no-repeat center;
+  background-size: 100% 99%;
   padding: 10px 15px 10px 15px;
   display: flex;
   width: 100%;
 }
 
 .dark .creator_block_info_main {
-  background: #282550;
+  background: url('../../../assets/img/creator_block_info_main_bg_dark.png')
+    no-repeat center;
+  background-size: 100% 99%;
 }
 
 .creator_block_info_img {
