--- a/src/components/Events/EventsBlock/EventsBlock.css
+++ b/src/components/Events/EventsBlock/EventsBlock.css
@@ -183,6 +183,7 @@
     width: -webkit-fit-content;
     width: -moz-fit-content;
     width: fit-content;
-    margin: 0 auto;
+    margin-left: 10px;
+    margin-bottom: 10px;
   }
 }
