--- a/src/components/Hub/HubMain/HubMain.css
+++ b/src/components/Hub/HubMain/HubMain.css
@@ -1,3 +1,27 @@
+.hub_main_page {
+  padding: 130px 0 50px;
+}
+
 .hub_main_page_header img {
   border-radius: 5px;
+}
+
+.hub_main_page_content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 30px 0;
+  flex-wrap: wrap;
+}
+
+@media (max-width: 575.98px) {
+  .hub_main_page_content {
+    justify-content: space-evenly;
+  }
+}
+
+@media (max-width: 400.98px) {
+  .hub_main_page_content {
+    justify-content: space-between;
+  }
 }
