--- a/src/components/Events/Event/Event.css
+++ b/src/components/Events/Event/Event.css
@@ -251,6 +251,9 @@
     width: fit-content;
     margin: 0 auto;
   }
+  .event_single_header_img_wrapper {
+    padding: 0;
+  }
   .event_single_header_left {
     width: 100%;
   }
