--- a/src/components/ProductCard/ProductAuction/ProductAuction.css
+++ b/src/components/ProductCard/ProductAuction/ProductAuction.css
@@ -13,6 +13,7 @@
   margin: 0 auto;
   border-radius: 5px;
   overflow: hidden;
+  max-height: 80vh;
 }
 
 .product_image img {
@@ -744,9 +745,18 @@
   }
 }
 
+@media (max-width: 767.98px) {
+  .product_image img {
+    max-height: none;
+  }
+  .product_image img {
+    height: auto;
+  }
+}
+
 @media (max-width: 575.98px) {
   .add_to_basket {
-    width: 100px;
+    width: 150px;
   }
   .creator_block_info_wrapper:first-child {
     margin-bottom: 20px;
@@ -800,6 +810,7 @@
   }
 
   .add_to_basket {
-    width: 84px;
+    width: 122px;
+    padding: 0;
   }
 }
